--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
 	"main": "./lib/schedule",
 	"author": "XiaogangZhang <zhang0925@gmail.com>, fantasyni <fantasyni@163.com>",
 	"dependencies": {
-		"log4js": "0.6.7"
+		"log4js": "^0.6.7"
 	}
 }
